Fixed up some layout issues

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -145,3 +145,7 @@ button {
   text-align: left;
   display: inline-block;
 }
+
+.marginBottom5 {
+    margin-bottom: 5px;
+}
